--- a/skynet/1.0_avanze.md
+++ b/skynet/1.0_avanze.md
@@ -210,3 +210,7 @@ $IdAlmacen
 
     DELIMITER ;
 ```
+
+
+# Hotel chaski Soporte
+- Modifique la funcion para reenviar el comprobante (services/facturacion.php) Reenviar comprobante  linea 475 aproximadamente
