--- a/skynet/1.0_avanze.md
+++ b/skynet/1.0_avanze.md
@@ -214,3 +214,50 @@ $IdAlmacen
 
 # Hotel chaski Soporte
 - Modifique la funcion para reenviar el comprobante (services/facturacion.php) Reenviar comprobante  linea 475 aproximadamente
+
+
+# Modificaciones al sistema de minimarqet
+- las mismas modificaciones que en el zayber para la importacion de stock desde un archivo excel.
+
+
+# Modificaciones en el sistema Zayber
+- Implementacion de facturacion electronica NUBEFACT.
+- Control del stock mostrar detalles.
+
+- Empresas
+- Se modificao en almacenes
+```sql
+DELIMITER $$
+
+USE `db_zayber`$$
+
+DROP PROCEDURE IF EXISTS `mante_save_almacen`$$
+
+CREATE  PROCEDURE `mante_save_almacen`(`pId` INT(11), `pAlm` VARCHAR(150), `pSimbolo` VARCHAR(25), `pDescrip` VARCHAR(150), `pRuc` VARCHAR(50), `pRS` VARCHAR(200), `pDireccion` VARCHAR(150), `pColorFondo` VARCHAR(16), `pColorTexto` VARCHAR(16),   `pEstado` INT(1), `pIdEmpresa` INT(11))
+BEGIN
+    DECLARE cont INT(11);
+    IF(pId>0)THEN
+        UPDATE `mante_almacen` SET Almacen=pAlm,Simbolo=pSimbolo,Descripcion=pDescrip,Ruc=pRuc,RazonSocial=pRS,
+        Direccion=pDireccion, `ColorFondo`=pColorFondo, `ColorTexto`=pColorTexto, `Estado`=pEstado
+        WHERE IdAlmacen=pId;        
+	UPDATE `mante_almacen_empresa` SET `IdEmpresa` = pIdEmpresa WHERE IdAlmacen=pId;
+    ELSE
+        SELECT IFNULL(COUNT(*),0) INTO cont FROM `mante_almacen` WHERE Almacen=pAlm;
+        IF(cont=0)THEN
+        SELECT IFNULL(MAX(IdAlmacen+1),1) INTO pId FROM mante_almacen;
+        INSERT INTO mante_almacen VALUES(pId,pAlm,pSimbolo,pEstado,pDescrip,pRuc,pRS,pDireccion,pColorFondo,pColorTexto);
+        INSERT INTO mante_almacen_empresa VALUES(pId,pIdEmpresa);
+        END IF;
+    END IF;
+    END$$
+
+DELIMITER ;
+```
+
+
+Corregir en los detalles
+```sql
+ALTER TABLE `db_zayber`.`mante_registro_nota_pedido` ADD UNIQUE `idNotaPedidoUnique` (`IdNotaPedido`);
+
+ALTER TABLE `mante_registro_nota_pedido_detalle` ADD `IdNotaPedido` INT NOT NULL AFTER `IdVenta`, ADD INDEX `IdNotaPedidoDetalleUnique` (`IdNotaPedido`);
+```
