--- a/skynet/1.0_avanze.md
+++ b/skynet/1.0_avanze.md
@@ -259,5 +259,6 @@ Corregir en los detalles
 ```sql
 ALTER TABLE `db_zayber`.`mante_registro_nota_pedido` ADD UNIQUE `idNotaPedidoUnique` (`IdNotaPedido`);
 
-ALTER TABLE `mante_registro_nota_pedido_detalle` ADD `IdNotaPedido` INT NOT NULL AFTER `IdVenta`, ADD INDEX `IdNotaPedidoDetalleUnique` (`IdNotaPedido`);
+ALTER TABLE `mante_registro_nota_pedido_detalle` DROP INDEX `IdNotaPedidoDetalleUnique`;
+ALTER TABLE `db_zayber`.`mante_registro_nota_pedido_detalle` ADD INDEX `IdNotaPedidoDetalleIndex` (`IdNotaPedido`);
 ```
