--- a/skynet/5.0_SistemaDeCursos.md
+++ b/skynet/5.0_SistemaDeCursos.md
@@ -24,6 +24,8 @@
 
 # Base De datos
 ```sql
+CREATE DATABASE escuela;
+
 CREATE TABLE course(
     course_id INT AUTO_INCREMENT NOT NULL,
     updated_at DATETIME,
@@ -39,19 +41,28 @@ CREATE TABLE course(
  
     start_date DATETIME DEFAULT CURRENT_DATE,
     finish_date DATETIME DEFAULT CURRENT_DATE,
+    state BOOLEAN DEFAULT 1,
 
     CONSTRAINT pk_course PRIMARY KEY (course_id)
 );
 
--- CREATE TABLE course_unit(
---     course_unit_id INT AUTO_INCREMENT NOT NULL,
---     updated_at DATETIME,
---     created_at DATETIME,
---     created_user_id INT,
---     updated_user_id INT,
+CREATE TABLE course_tree(
+    course_tree_id INT AUTO_INCREMENT NOT NULL,
+    updated_at DATETIME,
+    created_at DATETIME,
+    created_user_id INT,
+    updated_user_id INT,
 
---     CONSTRAINT pk_course_unit PRIMARY KEY (course_unit_id)
--- );
+    title VARCHAR(128) NOT NULL,
+    description TEXT DEFAULT '',
+    course_tree_type VARCHAR(15) DEFAULT '',
+    note float DEFAULT 0,
+
+    parent_id INT DEFAULT 0,
+    state BOOLEAN DEFAULT 1,
+
+    CONSTRAINT pk_course_tree PRIMARY KEY (course_tree_id)
+);
 
 CREATE TABLE course_unit(
     course_unit_id INT AUTO_INCREMENT NOT NULL,
@@ -60,8 +71,17 @@ CREATE TABLE course_unit(
     created_user_id INT,
     updated_user_id INT,
 
+    title VARCHAR(128) NOT NULL,
+    description TEXT DEFAULT '',
+    course_unit_type VARCHAR(15) DEFAULT '',
+    note float DEFAULT 0,
+
+    course_tree_id INT NOT NULL,
+    state BOOLEAN DEFAULT 1,
+
     CONSTRAINT pk_course_unit PRIMARY KEY (course_unit_id)
 );
+
 ```
 * ursos
     course_id
