--- a/skynet/1.0_avanze.md
+++ b/skynet/1.0_avanze.md
@@ -262,3 +262,25 @@ ALTER TABLE `db_zayber`.`mante_registro_nota_pedido` ADD UNIQUE `idNotaPedidoUni
 ALTER TABLE `mante_registro_nota_pedido_detalle` DROP INDEX `IdNotaPedidoDetalleUnique`;
 ALTER TABLE `db_zayber`.`mante_registro_nota_pedido_detalle` ADD INDEX `IdNotaPedidoDetalleIndex` (`IdNotaPedido`);
 ```
+
+
+
+# Teleredes
+- Kiara mirian almeyda hancco
+limpiar la base de datos
+
+* 01-15 .
+
+* Zayber examinar detenidamente y mejorar
+- Nota de pedido
+
+
+
+
+# SS
+home model
+home controller
+
+
+colorado  e&l principal
+zayber principal.d
