--- a/skynet/5.0_SistemaDeCursos.md
+++ b/skynet/5.0_SistemaDeCursos.md
@@ -24,7 +24,34 @@
 
 # Base De datos
 ```sql
-CREATE DATABASE escuela;
+DROP DATABASE IF EXIST skyschool;
+CREATE DATABASE skyschool;
+USE skyschool;
+
+CREATE TABLE category(
+    category_id INT AUTO_INCREMENT NOT NULL,
+    updated_at DATETIME,
+    created_at DATETIME,
+    created_user_id INT,
+    updated_user_id INT,
+
+    title VARCHAR(128) NOT NULL,
+    description TEXT NOT NULL,
+    parent_id INT DEFAULT 0,
+    state BOOLEAN DEFAULT 1,
+
+    CONSTRAINT pk_category PRIMARY KEY (category_id)
+);
+
+-- CREATE TABLE group(
+--     group_id INT AUTO_INCREMENT NOT NULL,
+--     updated_at DATETIME,
+--     created_at DATETIME,
+--     created_user_id INT,
+--     updated_user_id INT,
+
+--     CONSTRAINT pk_group PRIMARY KEY (group_id)
+-- );
 
 CREATE TABLE course(
     course_id INT AUTO_INCREMENT NOT NULL,
@@ -41,9 +68,12 @@ CREATE TABLE course(
  
     start_date DATETIME DEFAULT CURRENT_DATE,
     finish_date DATETIME DEFAULT CURRENT_DATE,
+    category_id INT NOT NULL,
     state BOOLEAN DEFAULT 1,
 
-    CONSTRAINT pk_course PRIMARY KEY (course_id)
+    CONSTRAINT pk_course PRIMARY KEY (course_id),
+    CONSTRAINT fk_course_category FOREIGN KEY (category_id) REFERENCES category (category_id)
+        ON UPDATE RESTRICT ON DELETE RESTRICT
 );
 
 CREATE TABLE course_tree(
@@ -59,9 +89,12 @@ CREATE TABLE course_tree(
     note float DEFAULT 0,
 
     parent_id INT DEFAULT 0,
+    course_id INT NOT NULL,
     state BOOLEAN DEFAULT 1,
 
-    CONSTRAINT pk_course_tree PRIMARY KEY (course_tree_id)
+    CONSTRAINT pk_course_tree PRIMARY KEY (course_tree_id),
+    CONSTRAINT fk_course_tree_course FOREIGN KEY (course_id) REFERENCES course (course_id)
+        ON UPDATE RESTRICT ON DELETE RESTRICT
 );
 
 CREATE TABLE course_unit(
@@ -79,7 +112,61 @@ CREATE TABLE course_unit(
     course_tree_id INT NOT NULL,
     state BOOLEAN DEFAULT 1,
 
-    CONSTRAINT pk_course_unit PRIMARY KEY (course_unit_id)
+    CONSTRAINT pk_course_unit PRIMARY KEY (course_unit_id),
+    CONSTRAINT fk_course_unit_course FOREIGN KEY (course_tree_id) REFERENCES course_tree (course_tree_id)
+        ON UPDATE RESTRICT ON DELETE RESTRICT
+);
+
+CREATE TABLE user(
+    user_id INT AUTO_INCREMENT NOT NULL,
+    updated_at DATETIME,
+    created_at DATETIME,
+    created_user_id INT,
+    updated_user_id INT,
+
+    document_number varchar(32),
+    document_type varchar(32),
+    full_name VARCHAR(255) NOT NULL,
+    phone VARCHAR(32) DEFAULT '',
+    gender VARCHAR(12) DEFAULT '',
+    address VARCHAR(255) DEFAULT '',
+
+    CONSTRAINT pk_user PRIMARY KEY (user_id)
+);
+
+CREATE TABLE enrollment(
+    enrollment_id INT AUTO_INCREMENT NOT NULL,
+    updated_at DATETIME,
+    created_at DATETIME,
+    created_user_id INT,
+    updated_user_id INT,
+
+    student_id INT NOT NULL,
+    observation TEXT DEFAULT '',
+
+    CONSTRAINT pk_enrollment PRIMARY KEY (enrollment_id),
+    CONSTRAINT fk_enrollment_student FOREIGN KEY (student_id) REFERENCES student (student_id)
+        ON UPDATE RESTRICT ON DELETE RESTRICT
+);
+
+CREATE TABLE enrollment_detail(
+    enrollment_detail_id INT AUTO_INCREMENT NOT NULL,
+    updated_at DATETIME,
+    created_at DATETIME,
+    created_user_id INT,
+    updated_user_id INT,
+
+    enrollment_id INT NOT NULL,
+    student_id INT NOT NULL,
+    course_id INT NOT NULL,
+
+    CONSTRAINT pk_enrollment_detail PRIMARY KEY (enrollment_detail_id),
+    CONSTRAINT fk_enrollment_detail_enrollment FOREIGN KEY (enrollment_id) REFERENCES enrollment (enrollment_id)
+        ON UPDATE RESTRICT ON DELETE RESTRICT,
+    CONSTRAINT fk_enrollment_detail_student FOREIGN KEY (student_id) REFERENCES student (student_id)
+        ON UPDATE RESTRICT ON DELETE RESTRICT,
+    CONSTRAINT fk_enrollment_detail_course FOREIGN KEY (course_id) REFERENCES course (course_id)
+        ON UPDATE RESTRICT ON DELETE RESTRICT
 );
 
 ```
