--- a/skynet/1.0_avanze.md
+++ b/skynet/1.0_avanze.md
@@ -275,6 +275,12 @@ limpiar la base de datos
 - Nota de pedido
 
 
+# Zayber
+```sql
+UPDATE mante_producto SET `Codigo` = REPLACE(`Codigo`,"'",'&#039;');
+UPDATE mante_producto SET `Codigo` = REPLACE(`Codigo`,'"','&quot;');
+```
+
 
 
 # SS
@@ -284,3 +290,25 @@ home controller
 
 colorado  e&l principal
 zayber principal.d
+
+
+
+* Otras
+5.- Tienda principal
+vidal pocoricona leon
+
+
+5. almacen T.P. COMERCIAL L&E
+2. empresa 
+1. serie
+
+
+Para consulta el correlativo que le toca
+```SQL
+SELECT IFNULL(MAX(Numero+1),1) AS aNumero FROM `mante_venta` 
+	WHERE IdComprobante=1 AND Serie=1 AND IdEmpresa=2;
+```
+
+
+# IMPORTANTE *
+actualizar los detalles de la IdVenta 120 IdAlmacen
