--- a/skynet/1.0_avanze.md
+++ b/skynet/1.0_avanze.md
@@ -312,3 +312,230 @@ SELECT IFNULL(MAX(Numero+1),1) AS aNumero FROM `mante_venta`
 
 # IMPORTANTE *
 actualizar los detalles de la IdVenta 120 IdAlmacen
+
+
+	public static function Procesar_MovALm($Datos,$IdUser){
+		$IdRegistro = $Datos[0];
+		$FechaReg = date("Y-m-d H:i:s", (strtotime ("-5 Hours")));
+		$valido = false;
+		$mensage = '';
+
+		$pdo = ConexionBD::conectarBD();
+		$pdo->beginTransaction();
+		try {
+			// Consulta origen
+			$sql = "SELECT * FROM `mante_movimiento_almacen`  WHERE `IdRegistro` = '$IdRegistro' LIMIT 1";
+			$stm = $pdo->prepare($sql);
+			if(!$stm->execute()){
+				throw new Exception('Error en la consulta movimiento');
+			}
+			$movimiento = $stm->fetch();
+			$idAlmacenOrigen = $movimiento['IdOrigen'];
+			$idAlmacenDestino = $movimiento['IdDestino'];
+
+			// Detalle
+			$sql = "SELECT modetalle.IdDetalle, modetalle.Cantidad, modetalle.Codigo, modetalle.Producto, modetalle.PUnitario, modetalle.Importe, modetalle.IdProducto,
+					pro.`IdCategoria`, pro.`IdMarca`
+					FROM `mante_movimiento_almacen_detalle` AS modetalle
+					INNER JOIN `mante_producto` AS pro ON modetalle.`IdProducto` = pro.`IdProducto`
+					WHERE IdRegistro = '$IdRegistro'";
+			$stm = $pdo->prepare($sql);
+			if(!$stm->execute()){
+				throw new Exception('Error en la consulta detalle movimiento');
+			}
+			$movimientoDetalles = $stm->fetchAll();
+
+
+			// Consulta Origen
+			$sql = "SELECT * FROM `mante_almacen` WHERE IdAlmacen = '$idAlmacenOrigen' LIMIT 1";
+			$stm = $pdo->prepare($sql);
+			if(!$stm->execute()){
+				throw new Exception('Error en la consulta detalle movimiento');
+			}
+			$almacenOrigen = $stm->fetch();
+			$almacenOrigenDescripcion = $almacenOrigen['Almacen'];
+
+			$sql = "SELECT * FROM `mante_almacen` WHERE IdAlmacen = '$idAlmacenDestino' LIMIT 1";
+			$stm = $pdo->prepare($sql);
+			if(!$stm->execute()){
+				throw new Exception('Error en la consulta detalle movimiento');
+			}
+			$almacenDestino = $stm->fetch();
+			$almacenDestinoDescripcion = $almacenDestino['Almacen'];
+
+
+			foreach ($movimientoDetalles as $movimientoDetalle) {
+				$Cantidad = $movimientoDetalle['Cantidad'];
+				$IdProducto = $movimientoDetalle['IdProducto'];
+				$PUnitario = $movimientoDetalle['PUnitario'];
+				$Importe = $movimientoDetalle['Importe'];
+				$Producto = $movimientoDetalle['Producto'];
+				// $Unidad = $movimientoDetalle['Unidad'];
+				// $IdMarca = $movimientoDetalle['IdMarca'];
+				$IdCategoria = $movimientoDetalle['IdCategoria'];
+				$Cantidad = (float)$Cantidad;
+
+				// Restando
+				$sql = "UPDATE `mante_producto_almacen` SET Stock = (Stock-'$Cantidad') WHERE IdProducto = '$IdProducto' AND IdAlmacen='$idAlmacenOrigen'";
+				$stm = $pdo->prepare($sql);
+				if(!$stm->execute()){
+					throw new Exception('Error al actualizar el stock');
+				}
+
+				// Exite ?
+				$sql = "SELECT IFNULL(COUNT(*),0) AS acont FROM mante_producto_almacen WHERE IdProducto='$IdProducto' AND IdAlmacen='$idAlmacenDestino'";
+				$stm = $pdo->prepare($sql);
+				if(!$stm->execute()){
+					throw new Exception('Error buscando existencia destino');
+				}
+				$existe = $stm->fetch();
+				if($existe['acont']>0){
+					// Summando
+					$sql = "UPDATE `mante_producto_almacen` SET Stock = (Stock+'$Cantidad') WHERE IdProducto = '$IdProducto' AND IdAlmacen='$idAlmacenDestino';";
+					$stm = $pdo->prepare($sql);
+					if(!$stm->execute()){
+						throw new Exception('Error en al actualizar almacen destino');
+					}
+				} else {
+					// Insertando
+					$sql = "INSERT INTO mante_producto_almacen VALUES('$idAlmacenDestino','$IdProducto',1,1,'$Cantidad','$PUnitario','$PUnitario','$PUnitario','$PUnitario',1,1)";
+					$stm = $pdo->prepare($sql);
+					if(!$stm->execute()){
+						throw new Exception('Error en al actualizar almacen destino');
+					}
+				}
+
+				// Kardex Origen
+				$sql = "SELECT IFNULL(Stock,0) as Stock FROM mante_kardex WHERE IdAlmacen='$idAlmacenOrigen' AND IdProducto='$IdProducto' ORDER BY '$FechaReg' DESC LIMIT 1";
+				$stm = $pdo->prepare($sql);
+				if(!$stm->execute()){
+					throw new Exception('Error buscando existencia destino');
+				}
+				$stock = $stm->fetch();
+				$nuevoStock = $stock['Stock'] - $Cantidad;
+
+				// INSERT INTO `mante_kardex` VALUES(pFechaReg,pIdUser,ppOriAlm,ppDesAlm,aOriAlm,aIdProducto,aProducto,aCantidad,aPUnitario,aImporte,aStock,9,'Movimiento Alm',2,aFamilia);
+				$sql = "INSERT INTO `mante_kardex` VALUES('$FechaReg','$IdUser','$almacenOrigenDescripcion','$almacenDestinoDescripcion','$idAlmacenOrigen','$IdProducto','$Producto','$Cantidad','$PUnitario','$Importe','$nuevoStock',9,'Movimiento Alm',2,'$IdCategoria')";
+				$stm = $pdo->prepare($sql);
+				if(!$stm->execute()){
+					throw new Exception('Error en al actualizar almacen destino');
+				}
+
+				// Kardex Destino
+				$sql = "SELECT IFNULL(Stock,0) as Stock FROM mante_kardex WHERE IdAlmacen='$idAlmacenDestino' AND IdProducto='$IdProducto' ORDER BY '$FechaReg' DESC LIMIT 1";
+				$stm = $pdo->prepare($sql);
+				if(!$stm->execute()){
+					throw new Exception('Error buscando existencia destino');
+				}
+				$existe = $stm->fetch();
+				$nuevoStock = $stock['Stock'] + $Cantidad;
+
+				// INSERT INTO `mante_kardex` VALUES(pFechaReg,pIdUser,ppDesAlm,ppOriAlm,aDesAlm,aIdProducto,aProducto,aCantidad,aPUnitario,aImporte,aStock,9,'Movimiento Alm',1,aFamilia);
+				$sql = "INSERT INTO `mante_kardex` VALUES('$FechaReg','$IdUser','$almacenDestinoDescripcion','$almacenOrigenDescripcion','$idAlmacenDestino','$IdProducto','$Producto','$Cantidad','$PUnitario','$Importe','$nuevoStock',9,'Movimiento Alm',1,'$IdCategoria')";
+				$stm = $pdo->prepare($sql);
+				if(!$stm->execute()){
+					throw new Exception('Error en al actualizar almacen destino');
+				}
+			}
+
+			// Actualizar estado movimiento
+			$sql = "UPDATE `mante_movimiento_almacen` SET Estado = '2' WHERE IdRegistro='$IdRegistro'";
+			$stm = $pdo->prepare($sql);
+			if(!$stm->execute()){
+				throw new Exception('Error en al actualizar el estado del mantenimiento');
+			}
+
+			$valido = true;
+			$mensage = '';
+			$pdo->commit();
+		}catch(Exception $e){
+			$mensage = $e->getMessage() . $e->getTraceAsString();
+			$pdo->rollBack();
+		}
+
+		return [
+			'success' => $valido,
+			'mensage' => $mensage,
+		];
+ 	}
+
+
+
+
+
+
+     DELIMITER $$
+
+USE `db_zayber`$$
+
+DROP PROCEDURE IF EXISTS `procesar_movAlm`$$
+
+CREATE DEFINER=`root`@`localhost` PROCEDURE `procesar_movAlm`(IN `pIdVenta` BIGINT(20), IN `pIdUser` INT(11), IN `pFechaReg` DATETIME)
+BEGIN
+	DECLARE aIdDetalle INT(3);
+	DECLARE aCantidad DOUBLE(11,2);
+	DECLARE aCodigo VARCHAR(100);
+	DECLARE aProducto VARCHAR(100);
+	DECLARE aPUnitario DOUBLE(11,2);
+	DECLARE aImporte DOUBLE(11,2);
+	DECLARE aIdProducto INT(11);
+	
+	DECLARE aOriAlm INT(11);DECLARE aDesAlm INT(11);
+	DECLARE ppOriAlm VARCHAR(100);DECLARE ppDesAlm VARCHAR(100);
+	
+	DECLARE acont INT(3);
+	DECLARE aStock DOUBLE(11,2);
+	DECLARE aFamilia INT(5);
+	
+	DECLARE last_row INT DEFAULT 0;
+
+	DECLARE puntero CURSOR FOR SELECT IdDetalle,Cantidad,Codigo,Producto,PUnitario,Importe,IdProducto
+		FROM `mante_movimiento_almacen_detalle` WHERE IdRegistro=pIdVenta;
+	
+	DECLARE CONTINUE HANDLER FOR NOT FOUND SET last_row = 1;
+	
+	SELECT IFNULL(IdOrigen,0) INTO aOriAlm FROM `mante_movimiento_almacen` WHERE IdRegistro=pIdVenta LIMIT 1;
+	SELECT IFNULL(IdDestino,0) INTO aDesAlm FROM `mante_movimiento_almacen` WHERE IdRegistro=pIdVenta LIMIT 1;
+	SET ppOriAlm='';
+    SET ppDesAlm='';
+    SET aFamilia=-1;
+	SELECT IFNULL(Almacen,'') INTO ppOriAlm FROM `mante_almacen` WHERE IdAlmacen=aOriAlm LIMIT 1;
+	SELECT IFNULL(Almacen,'') INTO ppDesAlm FROM `mante_almacen` WHERE IdAlmacen=aDesAlm LIMIT 1;
+	
+	SET aStock=0;SET acont=0;
+	OPEN puntero;
+		start_loop: LOOP
+			FETCH puntero INTO aIdDetalle,aCantidad,aCodigo,aProducto,aPUnitario,aImporte,aIdProducto;
+			IF(last_row=1) THEN
+				LEAVE start_loop;
+			END IF;
+			UPDATE `mante_producto_almacen` SET Stock=Stock-aCantidad WHERE IdProducto=aIdProducto AND IdAlmacen=aOriAlm;
+			
+			SELECT IFNULL(COUNT(*),0) INTO acont FROM mante_producto_almacen WHERE IdProducto=aIdProducto AND IdAlmacen=aDesAlm;
+			IF(acont>0)THEN
+				UPDATE `mante_producto_almacen` SET Stock=Stock+aCantidad WHERE IdProducto=aIdProducto AND IdAlmacen=aDesAlm;
+			ELSE
+				INSERT INTO mante_producto_almacen VALUES(aDesAlm,aIdProducto,1,1,aCantidad,aPUnitario,aPUnitario,aPUnitario,aPUnitario,1,1);
+			END IF;
+			SELECT IFNULL(IdCategoria,-1) INTO aFamilia FROM `mante_producto` WHERE IdProducto=aIdProducto LIMIT 1;
+			
+
+
+            
+			SELECT IFNULL(Stock,0) INTO aStock FROM mante_kardex WHERE IdAlmacen=aOriAlm AND IdProducto=aIdProducto ORDER BY FechaReg DESC LIMIT 1;
+			SET aStock=aStock-aCantidad;
+
+			INSERT INTO `mante_kardex` VALUES(pFechaReg,pIdUser,ppOriAlm,ppDesAlm,aOriAlm,aIdProducto,aProducto,aCantidad,aPUnitario,aImporte,aStock,9,'Movimiento Alm',2,aFamilia);
+			
+			SELECT IFNULL(Stock,0) INTO aStock FROM mante_kardex WHERE IdAlmacen=aDesAlm AND IdProducto=aIdProducto ORDER BY FechaReg DESC LIMIT 1;
+			SET aStock=0;
+			SET aStock=aStock+aCantidad;
+			
+			INSERT INTO `mante_kardex` VALUES(pFechaReg,pIdUser,ppDesAlm,ppOriAlm,aDesAlm,aIdProducto,aProducto,aCantidad,aPUnitario,aImporte,aStock,9,'Movimiento Alm',1,aFamilia);
+			
+		END LOOP start_loop;
+	CLOSE puntero;
+	UPDATE `mante_movimiento_almacen` SET Estado=2 WHERE IdRegistro=pIdVenta; 
+    END$$
+
+DELIMITER ;
