--- a/skynet/5.0_SistemaDeCursos.md
+++ b/skynet/5.0_SistemaDeCursos.md
@@ -28,6 +28,37 @@ DROP DATABASE IF EXIST skyschool;
 CREATE DATABASE skyschool;
 USE skyschool;
 
+
+CREATE TABLE app_authorization(
+    app_authorization_id INT AUTO_INCREMENT NOT NULL,
+    module varchar(64) NOT NULL,
+    action varchar(64),
+    description varchar(64),
+    state BOOLEAN,
+    CONSTRAINT pk_app_authorization PRIMARY KEY (app_authorization_id)
+);
+
+CREATE TABLE user_role(
+    user_role_id INT AUTO_INCREMENT NOT NULL,
+    updated_at DATETIME,
+    created_at DATETIME,
+    created_user_id INT,
+    updated_user_id INT,
+
+    name varchar(64) NOT NULL,
+    CONSTRAINT pk_user_role PRIMARY KEY (user_role_id)
+);
+
+CREATE TABLE user_role_authorization(
+    user_role_id INT NOT NULL,
+    app_authorization_id INT NOT NULL,
+    CONSTRAINT fk_user_role_authorization_user_role FOREIGN KEY (user_role_id) REFERENCES user_role (user_role_id)
+    ON UPDATE RESTRICT ON DELETE RESTRICT,
+    CONSTRAINT fk_user_role_authorization_app_authorization FOREIGN KEY (app_authorization_id) REFERENCES app_authorization (app_authorization_id)
+    ON UPDATE RESTRICT ON DELETE RESTRICT
+);
+
+
 CREATE TABLE category(
     category_id INT AUTO_INCREMENT NOT NULL,
     updated_at DATETIME,
@@ -61,6 +92,7 @@ CREATE TABLE course(
     updated_user_id INT,
 
     title VARCHAR(128) NOT NULL,
+    short_title VARCHAR(32) NOT NUll,
     description TEXT NOT NULL,
     short_description VARCHAR(255) DEFAULT '',
     poster VARCHAR(128) DEFAULT '',
@@ -141,11 +173,12 @@ CREATE TABLE enrollment(
     created_user_id INT,
     updated_user_id INT,
 
-    student_id INT NOT NULL,
+    user_id INT NOT NULL,
+    role_id INT NOT NULL,
     observation TEXT DEFAULT '',
 
     CONSTRAINT pk_enrollment PRIMARY KEY (enrollment_id),
-    CONSTRAINT fk_enrollment_student FOREIGN KEY (student_id) REFERENCES student (student_id)
+    CONSTRAINT fk_enrollment_user FOREIGN KEY (user_id) REFERENCES user (user_id)
         ON UPDATE RESTRICT ON DELETE RESTRICT
 );
 
@@ -157,13 +190,13 @@ CREATE TABLE enrollment_detail(
     updated_user_id INT,
 
     enrollment_id INT NOT NULL,
-    student_id INT NOT NULL,
+    user_id INT NOT NULL,
     course_id INT NOT NULL,
 
     CONSTRAINT pk_enrollment_detail PRIMARY KEY (enrollment_detail_id),
     CONSTRAINT fk_enrollment_detail_enrollment FOREIGN KEY (enrollment_id) REFERENCES enrollment (enrollment_id)
         ON UPDATE RESTRICT ON DELETE RESTRICT,
-    CONSTRAINT fk_enrollment_detail_student FOREIGN KEY (student_id) REFERENCES student (student_id)
+    CONSTRAINT fk_enrollment_detail_user FOREIGN KEY (user_id) REFERENCES user (user_id)
         ON UPDATE RESTRICT ON DELETE RESTRICT,
     CONSTRAINT fk_enrollment_detail_course FOREIGN KEY (course_id) REFERENCES course (course_id)
         ON UPDATE RESTRICT ON DELETE RESTRICT
