--- a/skynet/1.0_avanze.md
+++ b/skynet/1.0_avanze.md
@@ -310,232 +310,70 @@ SELECT IFNULL(MAX(Numero+1),1) AS aNumero FROM `mante_venta`
 ```
 
 
+
+
+
+# Regularizacion de movimientos de almacen
+Stock Insuficiente
+
+58	SF271	FILTRO DE COMBUSTIBLE SF-271	UNIDAD	4.00	232.00								Se agrego
+
+
+Not found
+
+ANALIZAR A FONDO
+12.00	742330087251.00	FILTRO SEPARADOR CAT. 1R0753 P551312	UNIDAD	0.00	0.00			No se agrego no era necesario => unico
+12.00	742330087251.00	FILTRO SEPARADOR CAT. 1R0753 P551312	UNIDAD	0.00	0.00			No se agrego no era necesario => unico
+12.00	742330087251.00	FILTRO SEPARADOR CAT. 1R0753 P551312	UNIDAD	0.00	0.00			No se agrego no era necesario => unico 28
+
+
+** TABLA A REGULARIZAR **
+12	742330044506.00	FILTRO DE ACEITE VOLVO (466634) P554004	UNIDAD	30.00	360.00
+58	SF271			FILTRO DE COMBUSTIBLE SF-271	UNIDAD	4.00	232.00
+25	SOF72466		FILTRO DE ACEITE (3001) SOF-7-2466	UNIDAD	7.00	175.00
+12	9091510001.00	FILTRO DE ACEITE NEGRO TOYOTA 90915-10001 TF-3001N	UNIDAD	10.00	120.00
+6	11M73			BATERIA 11M73	UNIDAD	260.00	1560.00
+5	LF38			FILTRO DE ACEITE LF-38	UNIDAD	16.00	80.00
+12	LF32			FILTRO DE ACEITE LF-32	UNIDAD	16.00	192.00
+168	21400400450.00	ACEITE HELIX SN HX5 20W50	UNIDAD	20.00	3360.00
+4	BAE2065			FILTRO DE AIRE BAE-2065	UNIDAD	45.00	180.00
+4	310202610.00	HIDROLINA HYDROFLUID AW-68 X 5GLN	UNIDAD	140.00	560.00
+3	13M87			BATERIA 13M87	UNIDAD	310.00	930.00
+9	LF17356			FILTRO DE ACEITE LF17356	UNIDAD	54.00	486.00
+5	LF3401			FILTRO DE ACEITE LF-3401	UNIDAD	18.00	90.00
+6	742330137734.00	FILTRO DE COMBUSTIBLE VOLVO (20430751) P550529	UNIDAD	38.00	228.00
+2	742330107744.00	FILTRO DE ACEITE BY PASS VOLVO (477556) P550425	UNIDAD	32.00	64.00
+12	742330044506.00	FILTRO DE ACEITE VOLVO (466634) P554004	UNIDAD	30.00	360.00
+12	742330087282.00	FILTRO DE COMBUSTIBLE CAT. DMX P551315	UNIDAD	42.00	504.00
+2	742330112663.00	FILTRO DE AIRE 1°E P780519	UNIDAD	260.00	520.00
+12	SOF72404		FILTRO DE ACEITE SOF-7-2404(LF80)	UNIDAD	8.00	96.00
+3	SOF72125		FILTRO DE ACEITE SOF-7-2125(LF601)	UNIDAD	19.00	57.00
+3	SOFZ2271		FILTRO DE ACEITE SOF-Z-2271(LF833)	UNIDAD	12.00	36.00
+3	SOFZ2316		FILTRO DE ACEITE SOF-Z-2316(LF604)	UNIDAD	17.00	51.00
+9	SF257			FILTRO DE COMBUSTIBLE SF-257	UNIDAD	4.00	36.00
+4	MTF7P			BATERIA MTF-7P	UNIDAD	120.00	480.00
+3	LF9				FILTRO DE ACEITE LF-9	UNIDAD	10.00	30.00
+12	LF111			FILTRO DE ACEITE LF-111	UNIDAD	8.00	96.00
+1	MT38			BATERIA MT38	UNIDAD	142.50	142.50
+4	AFL3545HDR		FILTRO DE AIRE AFL-3545HDR	UNIDAD	75.00	300.00
+2	8997879017869.00KIT DE FILTROS DE AIRE A-5541-S	UNIDAD	60.00	120.00
+6	742330197462.00	FILTRO DE COMBUSTIBLE P550880	UNIDAD	60.00	360.00
+5	742330043639.00	FILTRO DE ACEITE ROSCADO P551102	UNIDAD	57.00	285.00
+2	742330194843.00	FILTRO SEPARADOR PERKINS 2650143 P551424	UNIDAD	62.00	124.00
+
+
 # IMPORTANTE *
 actualizar los detalles de la IdVenta 120 IdAlmacen
 
 
-	public static function Procesar_MovALm($Datos,$IdUser){
-		$IdRegistro = $Datos[0];
-		$FechaReg = date("Y-m-d H:i:s", (strtotime ("-5 Hours")));
-		$valido = false;
-		$mensage = '';
+- ANALISIS
+							destino		// 		Origen								Destino  			Origen
+>>>	SET con ids Antiguos     + 			// 		-		>> revertirlo 2				-					+
+<<<							  					+		>> revertirlo 1									-
 
-		$pdo = ConexionBD::conectarBD();
-		$pdo->beginTransaction();
-		try {
-			// Consulta origen
-			$sql = "SELECT * FROM `mante_movimiento_almacen`  WHERE `IdRegistro` = '$IdRegistro' LIMIT 1";
-			$stm = $pdo->prepare($sql);
-			if(!$stm->execute()){
-				throw new Exception('Error en la consulta movimiento');
-			}
-			$movimiento = $stm->fetch();
-			$idAlmacenOrigen = $movimiento['IdOrigen'];
-			$idAlmacenDestino = $movimiento['IdDestino'];
+- SOLUCION
+>>> Ejecutar el ubdate de reversion																	Listo			
+>>>	buscar los productos que se movieron crear un update para ese productos que se movieron			Falta
 
-			// Detalle
-			$sql = "SELECT modetalle.IdDetalle, modetalle.Cantidad, modetalle.Codigo, modetalle.Producto, modetalle.PUnitario, modetalle.Importe, modetalle.IdProducto,
-					pro.`IdCategoria`, pro.`IdMarca`
-					FROM `mante_movimiento_almacen_detalle` AS modetalle
-					INNER JOIN `mante_producto` AS pro ON modetalle.`IdProducto` = pro.`IdProducto`
-					WHERE IdRegistro = '$IdRegistro'";
-			$stm = $pdo->prepare($sql);
-			if(!$stm->execute()){
-				throw new Exception('Error en la consulta detalle movimiento');
-			}
-			$movimientoDetalles = $stm->fetchAll();
-
-
-			// Consulta Origen
-			$sql = "SELECT * FROM `mante_almacen` WHERE IdAlmacen = '$idAlmacenOrigen' LIMIT 1";
-			$stm = $pdo->prepare($sql);
-			if(!$stm->execute()){
-				throw new Exception('Error en la consulta detalle movimiento');
-			}
-			$almacenOrigen = $stm->fetch();
-			$almacenOrigenDescripcion = $almacenOrigen['Almacen'];
-
-			$sql = "SELECT * FROM `mante_almacen` WHERE IdAlmacen = '$idAlmacenDestino' LIMIT 1";
-			$stm = $pdo->prepare($sql);
-			if(!$stm->execute()){
-				throw new Exception('Error en la consulta detalle movimiento');
-			}
-			$almacenDestino = $stm->fetch();
-			$almacenDestinoDescripcion = $almacenDestino['Almacen'];
-
-
-			foreach ($movimientoDetalles as $movimientoDetalle) {
-				$Cantidad = $movimientoDetalle['Cantidad'];
-				$IdProducto = $movimientoDetalle['IdProducto'];
-				$PUnitario = $movimientoDetalle['PUnitario'];
-				$Importe = $movimientoDetalle['Importe'];
-				$Producto = $movimientoDetalle['Producto'];
-				// $Unidad = $movimientoDetalle['Unidad'];
-				// $IdMarca = $movimientoDetalle['IdMarca'];
-				$IdCategoria = $movimientoDetalle['IdCategoria'];
-				$Cantidad = (float)$Cantidad;
-
-				// Restando
-				$sql = "UPDATE `mante_producto_almacen` SET Stock = (Stock-'$Cantidad') WHERE IdProducto = '$IdProducto' AND IdAlmacen='$idAlmacenOrigen'";
-				$stm = $pdo->prepare($sql);
-				if(!$stm->execute()){
-					throw new Exception('Error al actualizar el stock');
-				}
-
-				// Exite ?
-				$sql = "SELECT IFNULL(COUNT(*),0) AS acont FROM mante_producto_almacen WHERE IdProducto='$IdProducto' AND IdAlmacen='$idAlmacenDestino'";
-				$stm = $pdo->prepare($sql);
-				if(!$stm->execute()){
-					throw new Exception('Error buscando existencia destino');
-				}
-				$existe = $stm->fetch();
-				if($existe['acont']>0){
-					// Summando
-					$sql = "UPDATE `mante_producto_almacen` SET Stock = (Stock+'$Cantidad') WHERE IdProducto = '$IdProducto' AND IdAlmacen='$idAlmacenDestino';";
-					$stm = $pdo->prepare($sql);
-					if(!$stm->execute()){
-						throw new Exception('Error en al actualizar almacen destino');
-					}
-				} else {
-					// Insertando
-					$sql = "INSERT INTO mante_producto_almacen VALUES('$idAlmacenDestino','$IdProducto',1,1,'$Cantidad','$PUnitario','$PUnitario','$PUnitario','$PUnitario',1,1)";
-					$stm = $pdo->prepare($sql);
-					if(!$stm->execute()){
-						throw new Exception('Error en al actualizar almacen destino');
-					}
-				}
-
-				// Kardex Origen
-				$sql = "SELECT IFNULL(Stock,0) as Stock FROM mante_kardex WHERE IdAlmacen='$idAlmacenOrigen' AND IdProducto='$IdProducto' ORDER BY '$FechaReg' DESC LIMIT 1";
-				$stm = $pdo->prepare($sql);
-				if(!$stm->execute()){
-					throw new Exception('Error buscando existencia destino');
-				}
-				$stock = $stm->fetch();
-				$nuevoStock = $stock['Stock'] - $Cantidad;
-
-				// INSERT INTO `mante_kardex` VALUES(pFechaReg,pIdUser,ppOriAlm,ppDesAlm,aOriAlm,aIdProducto,aProducto,aCantidad,aPUnitario,aImporte,aStock,9,'Movimiento Alm',2,aFamilia);
-				$sql = "INSERT INTO `mante_kardex` VALUES('$FechaReg','$IdUser','$almacenOrigenDescripcion','$almacenDestinoDescripcion','$idAlmacenOrigen','$IdProducto','$Producto','$Cantidad','$PUnitario','$Importe','$nuevoStock',9,'Movimiento Alm',2,'$IdCategoria')";
-				$stm = $pdo->prepare($sql);
-				if(!$stm->execute()){
-					throw new Exception('Error en al actualizar almacen destino');
-				}
-
-				// Kardex Destino
-				$sql = "SELECT IFNULL(Stock,0) as Stock FROM mante_kardex WHERE IdAlmacen='$idAlmacenDestino' AND IdProducto='$IdProducto' ORDER BY '$FechaReg' DESC LIMIT 1";
-				$stm = $pdo->prepare($sql);
-				if(!$stm->execute()){
-					throw new Exception('Error buscando existencia destino');
-				}
-				$existe = $stm->fetch();
-				$nuevoStock = $stock['Stock'] + $Cantidad;
-
-				// INSERT INTO `mante_kardex` VALUES(pFechaReg,pIdUser,ppDesAlm,ppOriAlm,aDesAlm,aIdProducto,aProducto,aCantidad,aPUnitario,aImporte,aStock,9,'Movimiento Alm',1,aFamilia);
-				$sql = "INSERT INTO `mante_kardex` VALUES('$FechaReg','$IdUser','$almacenDestinoDescripcion','$almacenOrigenDescripcion','$idAlmacenDestino','$IdProducto','$Producto','$Cantidad','$PUnitario','$Importe','$nuevoStock',9,'Movimiento Alm',1,'$IdCategoria')";
-				$stm = $pdo->prepare($sql);
-				if(!$stm->execute()){
-					throw new Exception('Error en al actualizar almacen destino');
-				}
-			}
-
-			// Actualizar estado movimiento
-			$sql = "UPDATE `mante_movimiento_almacen` SET Estado = '2' WHERE IdRegistro='$IdRegistro'";
-			$stm = $pdo->prepare($sql);
-			if(!$stm->execute()){
-				throw new Exception('Error en al actualizar el estado del mantenimiento');
-			}
-
-			$valido = true;
-			$mensage = '';
-			$pdo->commit();
-		}catch(Exception $e){
-			$mensage = $e->getMessage() . $e->getTraceAsString();
-			$pdo->rollBack();
-		}
-
-		return [
-			'success' => $valido,
-			'mensage' => $mensage,
-		];
- 	}
-
-
-
-
-
-
-     DELIMITER $$
-
-USE `db_zayber`$$
-
-DROP PROCEDURE IF EXISTS `procesar_movAlm`$$
-
-CREATE DEFINER=`root`@`localhost` PROCEDURE `procesar_movAlm`(IN `pIdVenta` BIGINT(20), IN `pIdUser` INT(11), IN `pFechaReg` DATETIME)
-BEGIN
-	DECLARE aIdDetalle INT(3);
-	DECLARE aCantidad DOUBLE(11,2);
-	DECLARE aCodigo VARCHAR(100);
-	DECLARE aProducto VARCHAR(100);
-	DECLARE aPUnitario DOUBLE(11,2);
-	DECLARE aImporte DOUBLE(11,2);
-	DECLARE aIdProducto INT(11);
-	
-	DECLARE aOriAlm INT(11);DECLARE aDesAlm INT(11);
-	DECLARE ppOriAlm VARCHAR(100);DECLARE ppDesAlm VARCHAR(100);
-	
-	DECLARE acont INT(3);
-	DECLARE aStock DOUBLE(11,2);
-	DECLARE aFamilia INT(5);
-	
-	DECLARE last_row INT DEFAULT 0;
-
-	DECLARE puntero CURSOR FOR SELECT IdDetalle,Cantidad,Codigo,Producto,PUnitario,Importe,IdProducto
-		FROM `mante_movimiento_almacen_detalle` WHERE IdRegistro=pIdVenta;
-	
-	DECLARE CONTINUE HANDLER FOR NOT FOUND SET last_row = 1;
-	
-	SELECT IFNULL(IdOrigen,0) INTO aOriAlm FROM `mante_movimiento_almacen` WHERE IdRegistro=pIdVenta LIMIT 1;
-	SELECT IFNULL(IdDestino,0) INTO aDesAlm FROM `mante_movimiento_almacen` WHERE IdRegistro=pIdVenta LIMIT 1;
-	SET ppOriAlm='';
-    SET ppDesAlm='';
-    SET aFamilia=-1;
-	SELECT IFNULL(Almacen,'') INTO ppOriAlm FROM `mante_almacen` WHERE IdAlmacen=aOriAlm LIMIT 1;
-	SELECT IFNULL(Almacen,'') INTO ppDesAlm FROM `mante_almacen` WHERE IdAlmacen=aDesAlm LIMIT 1;
-	
-	SET aStock=0;SET acont=0;
-	OPEN puntero;
-		start_loop: LOOP
-			FETCH puntero INTO aIdDetalle,aCantidad,aCodigo,aProducto,aPUnitario,aImporte,aIdProducto;
-			IF(last_row=1) THEN
-				LEAVE start_loop;
-			END IF;
-			UPDATE `mante_producto_almacen` SET Stock=Stock-aCantidad WHERE IdProducto=aIdProducto AND IdAlmacen=aOriAlm;
-			
-			SELECT IFNULL(COUNT(*),0) INTO acont FROM mante_producto_almacen WHERE IdProducto=aIdProducto AND IdAlmacen=aDesAlm;
-			IF(acont>0)THEN
-				UPDATE `mante_producto_almacen` SET Stock=Stock+aCantidad WHERE IdProducto=aIdProducto AND IdAlmacen=aDesAlm;
-			ELSE
-				INSERT INTO mante_producto_almacen VALUES(aDesAlm,aIdProducto,1,1,aCantidad,aPUnitario,aPUnitario,aPUnitario,aPUnitario,1,1);
-			END IF;
-			SELECT IFNULL(IdCategoria,-1) INTO aFamilia FROM `mante_producto` WHERE IdProducto=aIdProducto LIMIT 1;
-			
-
-
-            
-			SELECT IFNULL(Stock,0) INTO aStock FROM mante_kardex WHERE IdAlmacen=aOriAlm AND IdProducto=aIdProducto ORDER BY FechaReg DESC LIMIT 1;
-			SET aStock=aStock-aCantidad;
-
-			INSERT INTO `mante_kardex` VALUES(pFechaReg,pIdUser,ppOriAlm,ppDesAlm,aOriAlm,aIdProducto,aProducto,aCantidad,aPUnitario,aImporte,aStock,9,'Movimiento Alm',2,aFamilia);
-			
-			SELECT IFNULL(Stock,0) INTO aStock FROM mante_kardex WHERE IdAlmacen=aDesAlm AND IdProducto=aIdProducto ORDER BY FechaReg DESC LIMIT 1;
-			SET aStock=0;
-			SET aStock=aStock+aCantidad;
-			
-			INSERT INTO `mante_kardex` VALUES(pFechaReg,pIdUser,ppDesAlm,ppOriAlm,aDesAlm,aIdProducto,aProducto,aCantidad,aPUnitario,aImporte,aStock,9,'Movimiento Alm',1,aFamilia);
-			
-		END LOOP start_loop;
-	CLOSE puntero;
-	UPDATE `mante_movimiento_almacen` SET Estado=2 WHERE IdRegistro=pIdVenta; 
-    END$$
-
-DELIMITER ;
+Regularizar los productos que tuvieron sun set 0
+>>>	Crear otro update para los que setearon a 0														Falta
