--- a/skynet/5.0_SistemaDeCursos.md
+++ b/skynet/5.0_SistemaDeCursos.md
@@ -31,10 +31,10 @@ USE skyschool;
 
 CREATE TABLE app_authorization(
     app_authorization_id INT AUTO_INCREMENT NOT NULL,
-    module varchar(64) NOT NULL,
-    action varchar(64),
-    description varchar(64),
-    state BOOLEAN,
+    module VARCHAR(64) NOT NULL,
+    action VARCHAR(64) DEFAULT '',
+    description VARCHAR(64) DEFAULT '',
+    state TINYINT DEFAULT 1,
     CONSTRAINT pk_app_authorization PRIMARY KEY (app_authorization_id)
 );
 
@@ -45,7 +45,8 @@ CREATE TABLE user_role(
     created_user_id INT,
     updated_user_id INT,
 
-    name varchar(64) NOT NULL,
+    description varchar(64) NOT NULL,
+    state TINYINT DEFAULT 1,
     CONSTRAINT pk_user_role PRIMARY KEY (user_role_id)
 );
 
@@ -69,7 +70,7 @@ CREATE TABLE category(
     title VARCHAR(128) NOT NULL,
     description TEXT NOT NULL,
     parent_id INT DEFAULT 0,
-    state BOOLEAN DEFAULT 1,
+    state TINYINT DEFAULT 1,
 
     CONSTRAINT pk_category PRIMARY KEY (category_id)
 );
@@ -84,6 +85,17 @@ CREATE TABLE category(
 --     CONSTRAINT pk_group PRIMARY KEY (group_id)
 -- );
 
+CREATE TABLE course_level(
+    course_level_id INT AUTO_INCREMENT NOT NULL,
+    updated_at DATETIME,
+    created_at DATETIME,
+    created_user_id INT,
+    updated_user_id INT,
+
+    title VARCHAR(128) NOT NULL, 
+    CONSTRAINT pk_course_level PRIMARY KEY (course_level_id)
+);
+
 CREATE TABLE course(
     course_id INT AUTO_INCREMENT NOT NULL,
     updated_at DATETIME,
@@ -97,11 +109,12 @@ CREATE TABLE course(
     short_description VARCHAR(255) DEFAULT '',
     poster VARCHAR(128) DEFAULT '',
     price FLOAT DEFAULT 0,
+    course_level_id INT DEFAULT 0,
  
     start_date DATETIME DEFAULT CURRENT_DATE,
     finish_date DATETIME DEFAULT CURRENT_DATE,
     category_id INT NOT NULL,
-    state BOOLEAN DEFAULT 1,
+    state TINYINT DEFAULT 1,
 
     CONSTRAINT pk_course PRIMARY KEY (course_id),
     CONSTRAINT fk_course_category FOREIGN KEY (category_id) REFERENCES category (category_id)
@@ -122,7 +135,7 @@ CREATE TABLE course_tree(
 
     parent_id INT DEFAULT 0,
     course_id INT NOT NULL,
-    state BOOLEAN DEFAULT 1,
+    state TINYINT DEFAULT 1,
 
     CONSTRAINT pk_course_tree PRIMARY KEY (course_tree_id),
     CONSTRAINT fk_course_tree_course FOREIGN KEY (course_id) REFERENCES course (course_id)
@@ -140,12 +153,56 @@ CREATE TABLE course_unit(
     description TEXT DEFAULT '',
     course_unit_type VARCHAR(15) DEFAULT '',
     note float DEFAULT 0,
+    is_free TINYINT DEFAULT 0,
 
     course_tree_id INT NOT NULL,
-    state BOOLEAN DEFAULT 1,
+    state TINYINT DEFAULT 1,
 
     CONSTRAINT pk_course_unit PRIMARY KEY (course_unit_id),
     CONSTRAINT fk_course_unit_course FOREIGN KEY (course_tree_id) REFERENCES course_tree (course_tree_id)
+        ON UPDATE RESTRICT ON DELETE RESTRICT
+);
+
+CREATE TABLE course_resource(
+    course_resource_id INT AUTO_INCREMENT NOT NULL,
+    updated_at DATETIME,
+    created_at DATETIME,
+    created_user_id INT,
+    updated_user_id INT,
+
+    course_unit_id INT NOT NULL,
+    file_path  VARCHAR(255) DEFAULT TEXT,
+
+    CONSTRAINT pk_course_resource PRIMARY KEY (course_resource_id),
+    CONSTRAINT fk_course_resource_course_unit FOREIGN KEY (course_unit_id) REFERENCES course_unit (course_unit_id)
+        ON UPDATE RESTRICT ON DELETE RESTRICT
+);
+
+CREATE TABLE course_requirement(
+    course_requirement_id INT AUTO_INCREMENT NOT NULL,
+    updated_at DATETIME,
+    created_at DATETIME,
+    created_user_id INT,
+    updated_user_id INT,
+
+    description TEXT DEFAULT '',
+    course_id INT NOT NULL,
+    CONSTRAINT pk_course_requirement PRIMARY KEY (course_requirement_id),
+    CONSTRAINT fk_course_requirement_course FOREIGN KEY (course_id) REFERENCES course (course_id)
+        ON UPDATE RESTRICT ON DELETE RESTRICT
+);
+
+CREATE TABLE course_learn(
+    course_learn_id INT AUTO_INCREMENT NOT NULL,
+    updated_at DATETIME,
+    created_at DATETIME,
+    created_user_id INT,
+    updated_user_id INT,
+
+    description TEXT DEFAULT '',
+    course_id INT NOT NULL,
+    CONSTRAINT pk_course_learn PRIMARY KEY (course_learn_id),
+    CONSTRAINT fk_course_learn_course FOREIGN KEY (course_id) REFERENCES course (course_id)
         ON UPDATE RESTRICT ON DELETE RESTRICT
 );
 
@@ -162,8 +219,47 @@ CREATE TABLE user(
     phone VARCHAR(32) DEFAULT '',
     gender VARCHAR(12) DEFAULT '',
     address VARCHAR(255) DEFAULT '',
+    web_site VARCHAR(128) DEFAULT '';
+    facebook VARCHAR(128) DEFAULT '';
+    youtube VARCHAR(128) DEFAULT '';
+    biography TEXT DEFAULT '';
 
     CONSTRAINT pk_user PRIMARY KEY (user_id)
+);
+
+CREATE TABLE user_certificate(
+    user_certificate_id INT AUTO_INCREMENT NOT NULL,
+    updated_at DATETIME,
+    created_at DATETIME,
+    created_user_id INT,
+    updated_user_id INT,
+
+    user_id INT NOT NULL,
+    course_id INT NOT NULL,
+    public_key VARCHAR(255) NOT NULL,
+    assessment TEXT DEFAULT '',
+
+    date_of_issue DATETIME NOT NULL,
+    number_of_hours INT NOT NULL,
+
+    CONSTRAINT pk_user_certificate PRIMARY KEY (user_certificate_id),
+    CONSTRAINT fk_user_certificate_user FOREIGN KEY (user_id) REFERENCES user (user_id)
+        ON UPDATE RESTRICT ON DELETE RESTRICT,
+    CONSTRAINT fk_user_certificate_course FOREIGN KEY (course_id) REFERENCES course (course_id)
+        ON UPDATE RESTRICT ON DELETE RESTRICT,
+);
+
+CREATE TABLE enrollment_type(
+    enrollment_type_id INT AUTO_INCREMENT NOT NULL,
+    updated_at DATETIME,
+    created_at DATETIME,
+    created_user_id INT,
+    updated_user_id INT,
+
+    title VARCHAR(128) NOT NULL,
+    description TEXT DEFAULT '',
+
+    CONSTRAINT pk_enrollment_type PRIMARY KEY (enrollment_type_id)
 );
 
 CREATE TABLE enrollment(
@@ -174,8 +270,9 @@ CREATE TABLE enrollment(
     updated_user_id INT,
 
     user_id INT NOT NULL,
-    role_id INT NOT NULL,
+    assignment_role_id INT NOT NULL,
     observation TEXT DEFAULT '',
+    state TINYINT DEFAULT 1,
 
     CONSTRAINT pk_enrollment PRIMARY KEY (enrollment_id),
     CONSTRAINT fk_enrollment_user FOREIGN KEY (user_id) REFERENCES user (user_id)
@@ -191,6 +288,7 @@ CREATE TABLE enrollment_detail(
 
     enrollment_id INT NOT NULL,
     user_id INT NOT NULL,
+    assignment_role_id INT NOT NULL,
     course_id INT NOT NULL,
 
     CONSTRAINT pk_enrollment_detail PRIMARY KEY (enrollment_detail_id),
