--- a/skynet/5.0_SistemaDeCursos.md
+++ b/skynet/5.0_SistemaDeCursos.md
@@ -22,6 +22,12 @@
     - de cada cursos
 
 
+# Primera etapa
+* Registro de cursos
+* Registro de estudios
+* Registro de usuarios ->
+
+
 # Base De datos
 ```sql
 DROP DATABASE IF EXIST skyschool;
