--- a/skynet/1.0_avanze.md
+++ b/skynet/1.0_avanze.md
@@ -282,35 +282,11 @@ UPDATE mante_producto SET `Codigo` = REPLACE(`Codigo`,'"','&quot;');
 ```
 
 
-
-# SS
-home model
-home controller
-
-
-colorado  e&l principal
-zayber principal.d
-
-
-
-* Otras
-5.- Tienda principal
-vidal pocoricona leon
-
-
-5. almacen T.P. COMERCIAL L&E
-2. empresa 
-1. serie
-
-
 Para consulta el correlativo que le toca
 ```SQL
 SELECT IFNULL(MAX(Numero+1),1) AS aNumero FROM `mante_venta` 
 	WHERE IdComprobante=1 AND Serie=1 AND IdEmpresa=2;
 ```
-
-
-
 
 
 # Regularizacion de movimientos de almacen
@@ -363,7 +339,7 @@ ANALIZAR A FONDO
 
 
 # IMPORTANTE *
-actualizar los detalles de la IdVenta 120 IdAlmacen
+actualizar los detalles de la IdVenta 120 IdAlmacen -> Aun falta
 
 
 - ANALISIS
@@ -377,3 +353,103 @@ actualizar los detalles de la IdVenta 120 IdAlmacen
 
 Regularizar los productos que tuvieron sun set 0
 >>>	Crear otro update para los que setearon a 0														Falta
+
+
+# GUIA DE REMISION
+```SQL
+DROP TABLE IF EXISTS mante_motivo_traslado;
+CREATE TABLE mante_motivo_traslado(
+    codigo VARCHAR(2) NOT NULL,
+    descripcion VARCHAR(255) NOT NULL,
+    CONSTRAINT pk_mante_motivo_traslado PRIMARY KEY (codigo)
+);
+
+DROP TABLE IF EXISTS mante_ubicacion_geografica;
+CREATE TABLE mante_ubicacion_geografica (
+    codigo VARCHAR(6) NOT NULL,
+    distrito VARCHAR(64) NOT NULL,
+    provincia VARCHAR(64) NOT NULL,
+    departamento VARCHAR(64) NOT NULL,
+    CONSTRAINT pk_mante_ubicacion_geografica PRIMARY KEY (codigo)
+);
+
+DROP TABLE IF EXISTS mante_guia_remision;
+CREATE TABLE mante_guia_remision(
+    `IdGuiaRemision` INT AUTO_INCREMENT NOT NULL,
+    `IdAlmacen` int(5) NOT NULL,
+    `IdEmpresa` int(5) NOT NULL,
+    `IdComprobante` int(3) DEFAULT NULL,
+    `IdUsuario` int(11) DEFAULT NULL,
+    `Serie` int(5) DEFAULT '-1',
+    `Numero` int(11) DEFAULT '-1',
+    `IdMotivoTraslado` INT,
+
+    `Origen` VARCHAR(64) DEFAULT '', -- Mov. almacen, Venta, Compra.
+    `NroFactura` varchar(50) DEFAULT NULL, -- Facturas que hace referencia
+
+    `FechaReg` datetime DEFAULT NULL,
+    `FechaEmision` datetime DEFAULT NULL,
+    `FechaTraslado` DATETIME DEFAULT NULL,
+
+    `DestinatarioRasonSocial` VARCHAR(64),
+    `DestinatarioTipoDocumento` VARCHAR(64),
+    `DestinatarioNumeroDocumento` VARCHAR(64),
+
+    -- Transportista
+    `TransportistaVehiculo` VARCHAR(64),
+    `TransportistaMarca` VARCHAR(64),
+    `TransportistaPlacaN` VARCHAR(64),
+    `TransportistaCertificadoI` VARCHAR(64),
+    `TransportistaLicenciaC` VARCHAR(64),
+    
+    `ConductorTipoDocumento` VARCHAR(24),
+    `ConductorNumeroDocumento` VARCHAR(24),
+    `ConductorNombreCompleto` VARCHAR(24),
+    
+    `PuntoPartidaCodigo` VARCHAR(6),
+    `PuntoPartidaCodigoDireccion` VARCHAR(128),
+
+    `PuntoLlegadaCodigo` VARCHAR(6),
+    `PuntoLlegadaCodigoDireccion` VARCHAR(128),
+
+    `Enlace` VARCHAR(200) DEFAULT NULL,
+    `ErrorSunat` VARCHAR(250) DEFAULT NULL,
+
+    `Estado` int(1) DEFAULT '1',
+
+    CONSTRAINT pk_mante_guia_remision PRIMARY KEY (`IdGuiaRemision`)
+);
+
+DROP TABLE IF EXISTS mante_guia_remision_detalle;
+CREATE TABLE mante_guia_remision_detalle(
+    `IdGuiaRemisionDetalle` INT AUTO_INCREMENT NOT NULL,
+    `IdGuiaRemision` int NOT NULL,
+    `IdAlmacen` int(5) NOT NULL,
+    `IdEmpresa` int(5) NOT NULL,
+
+    `IdProducto` int(11) DEFAULT '-1',
+    `Codigo` varchar(50) DEFAULT NULL,
+    `Producto` VARCHAR(150) DEFAULT NULL,
+    `Cantidad` double(11,3) DEFAULT '0.000',
+    `Unidad` VARCHAR(50) DEFAULT NULL,
+    `Peso` double(11,3) DEFAULT '0.000',
+
+    CONSTRAINT pk_mante_guia_remision_detalle PRIMARY KEY (`IdGuiaRemisionDetalle`)
+);
+```
+
+```sql
+INSERT INTO `user_menu_sistema`(`IdForm`, `Enlace`, `Nombre`, `Estado`, `Nivel1`, `Nivel2`, `Menu`, `ColorFondo`, `ColorLetra`, `Permiso`, `Clase`, `Icono`) 
+			VALUES ('216','index.php?action=RegistroGuiaRemision','Guia Remision','1','2','8','Registro','#FF7814','','1','claRsva','fas fa-atlas'),
+			       ('217','index.php?action=ReporteGuiaRemision','R. Guia Remision','1','5','16','Registro','#FF7814','','1','claRsva','');
+```
+
+## Modificaciones archivos
+- enlaces.php
+## agregados
+- RegistroGuiaRemision.php
+- RegistroGuiaRemision.js
+
+- ReporteGuiaRemision.php
+- ReporteGuiaRemision.js
+10759526410
