--- a/skynet/5.0_SistemaDeCursos.md
+++ b/skynet/5.0_SistemaDeCursos.md
@@ -60,9 +60,9 @@ CREATE TABLE user_role_authorization(
     user_role_id INT NOT NULL,
     app_authorization_id INT NOT NULL,
     CONSTRAINT fk_user_role_authorization_user_role FOREIGN KEY (user_role_id) REFERENCES user_role (user_role_id)
-    ON UPDATE RESTRICT ON DELETE RESTRICT,
+    ON UPDATE NO ACTION ON DELETE NO ACTION,
     CONSTRAINT fk_user_role_authorization_app_authorization FOREIGN KEY (app_authorization_id) REFERENCES app_authorization (app_authorization_id)
-    ON UPDATE RESTRICT ON DELETE RESTRICT
+    ON UPDATE NO ACTION ON DELETE NO ACTION
 );
 
 
@@ -124,7 +124,7 @@ CREATE TABLE course(
 
     CONSTRAINT pk_course PRIMARY KEY (course_id),
     CONSTRAINT fk_course_category FOREIGN KEY (category_id) REFERENCES category (category_id)
-        ON UPDATE RESTRICT ON DELETE RESTRICT
+        ON UPDATE NO ACTION ON DELETE NO ACTION
 );
 
 CREATE TABLE course_tree(
@@ -145,7 +145,7 @@ CREATE TABLE course_tree(
 
     CONSTRAINT pk_course_tree PRIMARY KEY (course_tree_id),
     CONSTRAINT fk_course_tree_course FOREIGN KEY (course_id) REFERENCES course (course_id)
-        ON UPDATE RESTRICT ON DELETE RESTRICT
+        ON UPDATE NO ACTION ON DELETE NO ACTION
 );
 
 CREATE TABLE course_unit(
@@ -166,7 +166,7 @@ CREATE TABLE course_unit(
 
     CONSTRAINT pk_course_unit PRIMARY KEY (course_unit_id),
     CONSTRAINT fk_course_unit_course FOREIGN KEY (course_tree_id) REFERENCES course_tree (course_tree_id)
-        ON UPDATE RESTRICT ON DELETE RESTRICT
+        ON UPDATE NO ACTION ON DELETE NO ACTION
 );
 
 CREATE TABLE course_resource(
@@ -181,7 +181,7 @@ CREATE TABLE course_resource(
 
     CONSTRAINT pk_course_resource PRIMARY KEY (course_resource_id),
     CONSTRAINT fk_course_resource_course_unit FOREIGN KEY (course_unit_id) REFERENCES course_unit (course_unit_id)
-        ON UPDATE RESTRICT ON DELETE RESTRICT
+        ON UPDATE NO ACTION ON DELETE NO ACTION
 );
 
 CREATE TABLE course_requirement(
@@ -195,7 +195,7 @@ CREATE TABLE course_requirement(
     course_id INT NOT NULL,
     CONSTRAINT pk_course_requirement PRIMARY KEY (course_requirement_id),
     CONSTRAINT fk_course_requirement_course FOREIGN KEY (course_id) REFERENCES course (course_id)
-        ON UPDATE RESTRICT ON DELETE RESTRICT
+        ON UPDATE NO ACTION ON DELETE NO ACTION
 );
 
 CREATE TABLE course_learn(
@@ -209,7 +209,7 @@ CREATE TABLE course_learn(
     course_id INT NOT NULL,
     CONSTRAINT pk_course_learn PRIMARY KEY (course_learn_id),
     CONSTRAINT fk_course_learn_course FOREIGN KEY (course_id) REFERENCES course (course_id)
-        ON UPDATE RESTRICT ON DELETE RESTRICT
+        ON UPDATE NO ACTION ON DELETE NO ACTION
 );
 
 CREATE TABLE user(
@@ -250,9 +250,9 @@ CREATE TABLE user_certificate(
 
     CONSTRAINT pk_user_certificate PRIMARY KEY (user_certificate_id),
     CONSTRAINT fk_user_certificate_user FOREIGN KEY (user_id) REFERENCES user (user_id)
-        ON UPDATE RESTRICT ON DELETE RESTRICT,
+        ON UPDATE NO ACTION ON DELETE NO ACTION,
     CONSTRAINT fk_user_certificate_course FOREIGN KEY (course_id) REFERENCES course (course_id)
-        ON UPDATE RESTRICT ON DELETE RESTRICT,
+        ON UPDATE NO ACTION ON DELETE NO ACTION,
 );
 
 CREATE TABLE enrollment_type(
@@ -282,7 +282,7 @@ CREATE TABLE enrollment(
 
     CONSTRAINT pk_enrollment PRIMARY KEY (enrollment_id),
     CONSTRAINT fk_enrollment_user FOREIGN KEY (user_id) REFERENCES user (user_id)
-        ON UPDATE RESTRICT ON DELETE RESTRICT
+        ON UPDATE NO ACTION ON DELETE NO ACTION
 );
 
 CREATE TABLE enrollment_detail(
@@ -299,11 +299,11 @@ CREATE TABLE enrollment_detail(
 
     CONSTRAINT pk_enrollment_detail PRIMARY KEY (enrollment_detail_id),
     CONSTRAINT fk_enrollment_detail_enrollment FOREIGN KEY (enrollment_id) REFERENCES enrollment (enrollment_id)
-        ON UPDATE RESTRICT ON DELETE RESTRICT,
+        ON UPDATE NO ACTION ON DELETE NO ACTION,
     CONSTRAINT fk_enrollment_detail_user FOREIGN KEY (user_id) REFERENCES user (user_id)
-        ON UPDATE RESTRICT ON DELETE RESTRICT,
+        ON UPDATE NO ACTION ON DELETE NO ACTION,
     CONSTRAINT fk_enrollment_detail_course FOREIGN KEY (course_id) REFERENCES course (course_id)
-        ON UPDATE RESTRICT ON DELETE RESTRICT
+        ON UPDATE NO ACTION ON DELETE NO ACTION
 );
 
 ```
